# Schedule-Management

./: CMakeLists.txt  main.cpp
src/: Auxiliar.cpp  Auxiliar.h  Class.cpp  Class.h  Course.cpp  Course.h  JoinRequest.cpp  JoinRequest.h  LeaveRequest.cpp  LeaveRequest.h  Lecture.cpp  Lecture.h  Request.cpp  Request.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  SwitchClassRequest.cpp  SwitchClassRequest.h  SwitchUcRequest.cpp  SwitchUcRequest.h  Terminal.cpp  Terminal.h  UC.cpp  UC.h
